@@ -1,3 +1,8 @@
+Mon Nov 17 15:58:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * CCF/CCF/IDL2/Parser.hpp:
+          When interface is a define, undef it. Fixes bugzilla 3512
+
 Fri Nov 14 23:11:35 UTC 2008  Adam Mitz  <mitza@ociweb.com>
 
         * rules.ciao.GNU:
